--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -1,3 +1,6 @@
+# Sprint Status
+# This file tracks implementation progress through Phase 4.
+
 # generated: 2026-01-28
 # project: innovation-sandbox-on-aws-billing-seperator
 # tracking_system: file-system
@@ -32,38 +35,38 @@
 # - SM typically creates next story after previous one is 'done' to incorporate learnings
 # - Dev moves story to 'review', then runs code-review (fresh context, different LLM recommended)
 
-generated: 2026-01-28
-project: innovation-sandbox-on-aws-billing-seperator
-tracking_system: file-system
-story_location: _bmad-output/implementation-artifacts
+generated: "2026-01-28"
+project: "innovation-sandbox-on-aws-billing-seperator"
+tracking_system: "file-system"
+story_location: "_bmad-output/implementation-artifacts"
 
 development_status:
-  # Epic 1: Foundation & Validation
-  epic-1: backlog
-  1-1-event-routing-validation-spike: backlog
-  1-2-project-initialization-with-isb-submodule: backlog
-  1-3-build-verification-cdk-stack-shell: backlog
+  # Epic 1: Foundation & Validation (3 FRs)
+  epic-1: done
+  1-1-event-routing-validation-spike: done
+  1-2-project-initialization-with-isb-submodule: done
+  1-3-build-verification-cdk-stack-shell: done
   epic-1-retrospective: optional
 
-  # Epic 2: Account Lifecycle Automation
-  epic-2: backlog
-  2-1-shared-lambda-utilities-types: backlog
-  2-2-quarantinelambda-handler-implementation: backlog
-  2-3-unquarantinelambda-handler-implementation: backlog
-  2-4-cdk-infrastructure-event-pipeline-lambda-configuration: backlog
-  2-5-integration-wiring-end-to-end-verification: backlog
+  # Epic 2: Account Lifecycle Automation (27 FRs)
+  epic-2: done
+  2-1-shared-lambda-utilities-types: done
+  2-2-quarantinelambda-handler-implementation: done
+  2-3-unquarantinelambda-handler-implementation: done
+  2-4-cdk-infrastructure-event-pipeline-lambda-configuration: done
+  2-5-integration-wiring-end-to-end-verification: done
   epic-2-retrospective: optional
 
-  # Epic 3: Operational Monitoring
-  epic-3: backlog
-  3-1-sns-alert-topic-subscription: backlog
-  3-2-cloudwatch-alarms-failure-detection: backlog
-  3-3-cloudwatch-alarms-operational-anomalies: backlog
+  # Epic 3: Operational Monitoring (6 FRs)
+  epic-3: done
+  3-1-sns-alert-topic-subscription: done
+  3-2-cloudwatch-alarms-failure-detection: done
+  3-3-cloudwatch-alarms-operational-anomalies: done
   epic-3-retrospective: optional
 
-  # Epic 4: Production Deployment
-  epic-4: backlog
-  4-1-github-actions-ci-cd-pipeline: backlog
-  4-2-environment-configuration-clean-removal: backlog
-  4-3-integration-test-procedure-documentation: backlog
+  # Epic 4: Production Deployment (5 FRs)
+  epic-4: done
+  4-1-github-actions-cicd-pipeline: done
+  4-2-environment-configuration-clean-removal: done
+  4-3-integration-test-procedure-documentation: done
   epic-4-retrospective: optional
