--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,16 +48,45 @@ permissions:
   contents: read
 
 jobs:
+  # Always run validation on push to main
+  validate:
+    name: Validate
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run validation (lint + test + build)
+        run: npm run validate
+
+      - name: Verify CDK template generation
+        run: npx cdk synth --quiet
+
+  # Only deploy on manual trigger (requires AWS credentials)
   deploy:
     name: Deploy to ${{ github.event.inputs.environment || 'dev' }}
     runs-on: ubuntu-latest
+    needs: validate
+    if: github.event_name == 'workflow_dispatch'
     environment: ${{ github.event.inputs.environment || 'dev' }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          submodules: true  # Required for ISB submodule
+          submodules: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -73,9 +102,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Run validation (lint + test + build)
-        run: npm run validate
 
       - name: Deploy CDK stack
         run: npx cdk deploy --require-approval never --outputs-file cdk-outputs.json
