Fix CI: run Jest with single worker to avoid esbuild race conditions
- Add test:ci script that runs Jest with --maxWorkers=1
- Split validate into separate lint, test, and build steps
- CDK NodejsFunction tests create temp dirs that conflict when parallel

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,8 +68,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run validation (lint + test + build)
-        run: npm run validate
+      - name: Run linting
+        run: npm run lint
+
+      - name: Run tests
+        run: npm run test:ci
+
+      - name: Build
+        run: npm run build
 
       - name: Verify CDK template generation
         run: npx cdk synth --quiet
