--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "@aws-sdk/client-organizations": "^3.990.0",
     "@aws-sdk/credential-providers": "^3.990.0",
     "@aws-sdk/lib-dynamodb": "^3.990.0",
+    "@eslint/js": "^10.0.1",
     "@types/aws-lambda": "^8.10.160",
     "@types/jest": "^30.0.0",
     "@types/luxon": "^3.7.1",
     "@types/node": "^25.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.55.0",
-    "@typescript-eslint/parser": "^8.54.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "aws-cdk-lib": "^2.238.0",
     "constructs": "^10.4.5",
     "esbuild": "^0.27.3",
