--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@aws-sdk/client-organizations": "^3.995.0",
     "@aws-sdk/credential-providers": "^3.995.0",
     "@aws-sdk/lib-dynamodb": "^3.995.0",
+    "@eslint/js": "^10.0.1",
     "@types/aws-lambda": "^8.10.160",
     "@types/jest": "^30.0.0",
     "@types/luxon": "^3.7.1",
